# ros2_webots_vision

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.sh
camera_viewer/: CMakeLists.txt  package.xml
camera_viewer/src/: image_viewer_node.cpp
controllers/camera_viewer/: camera_viewer  camera_viewer.cpp
controllers/panda_controller/: Makefile  camera_viewer.cpp  gripper_controller.cpp  joint_controller.cpp  panda_controller.cpp
controllers/ros2_panda/: CMakeLists.txt  package.xml  ros2_panda
controllers/ros2_panda/include/: camera_publisher.hpp  panda_gripper_controller.hpp  panda_joint_controller.hpp  panda_tf_publisher.hpp
controllers/ros2_panda/launch/: combined.launch.py
controllers/ros2_panda/src/: camera_publisher.cpp  panda_gripper_controller.cpp  panda_joint_controller.cpp  panda_tf_publisher.cpp  ros2_panda.cpp
gui/: CMakeLists.txt  panda_gui.cpp
launch/: sim_launch.py
object_detector/: CMakeLists.txt  package.xml
object_detector/dataset/: data.yaml
object_detector/dataset/labels/: train.cache  val.cache
object_detector/dataset/labels/train/: 1696670622330.txt  1696670622333.txt  1696670622342.txt  1696670622346.txt  1696670622350.txt  1696670622353.txt  1696670622360.txt  1696670622387.txt  1696670622404.txt  1696670622412.txt  1696670622417.txt  1696670622432.txt  1696670622438.txt  1696670622460.txt  1696670622491.txt  1696670622496.txt  1696670622525.txt  1696670622532.txt  1696670622536.txt  1696670622540.txt  1696670622548.txt  1696670622552.txt  1696670622560.txt  1696670622564.txt  1696670622574.txt  1696670622582.txt  1696670622590.txt  1696670622594.txt  1696670622599.txt  1696670622603.txt  1696670622607.txt  1696670622611.txt  1696670622615.txt  1696670622620.txt  1696670622639.txt  1696670622644.txt  1696670622648.txt  WhatsApp Image 2023-10-13 at 11.49.48 AM (2).txt  WhatsApp Image 2023-10-13 at 11.49.49 AM.txt
object_detector/dataset/labels/val/: 1696670622656.txt  1696670622669.txt  1696670622678.txt  1696670622682.txt  1696670622687.txt  1696670622691.txt  1696670622696.txt  1696670622700.txt  1696670622704.txt  1696670622713.txt  1696670622717.txt  1696670622730.txt  1696670622734.txt  WhatsApp Image 2023-10-13 at 11.49.50 AM (2).txt  WhatsApp Image 2023-10-13 at 11.49.51 AM (1).txt  WhatsApp Image 2023-10-13 at 11.49.51 AM.txt
object_detector/object_detector/: object_detector.py
protos/: BlueBox.proto  GreenBox.proto  RedBox.proto
protos/panda/: Panda.proto  PandaHand.proto
pyqt_gui/: CMakeLists.txt  package.xml  setup.py
pyqt_gui/pyqt_gui/: gui_node.py  main.py  main_window.py  ros_node.py  utils.py
pyqt_gui/pyqt_gui/widgets/: control_panel.py  gripper_state.py  image_view.py  joint_state.py
resource/: dummy.urdf  panda.ini
src/object_depth_estimator/: CMakeLists.txt  package.xml
src/object_depth_estimator/src/: object_depth_estimator.cpp
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/dataset/labels/train/: 1696670622326.txt  1696670622337.txt  1696670622365.txt  1696670622369.txt  1696670622373.txt  1696670622379.txt  1696670622383.txt  1696670622390.txt  1696670622395.txt  1696670622400.txt  1696670622408.txt  1696670622421.txt  1696670622428.txt  1696670622443.txt  1696670622465.txt  1696670622470.txt  1696670622479.txt  1696670622484.txt  1696670622507.txt  1696670622513.txt  1696670622517.txt  1696670622521.txt  1696670622529.txt  1696670622544.txt  1696670622556.txt  1696670622567.txt  1696670622571.txt  1696670622578.txt  1696670622586.txt  1696670622624.txt  1696670622628.txt  1696670622631.txt  1696670622635.txt  WhatsApp Image 2023-10-13 at 11.49.47 AM (1).txt  WhatsApp Image 2023-10-13 at 11.49.47 AM.txt  WhatsApp Image 2023-10-13 at 11.49.48 AM (1).txt  WhatsApp Image 2023-10-13 at 11.49.48 AM.txt  WhatsApp Image 2023-10-13 at 11.49.49 AM (1).txt  WhatsApp Image 2023-10-13 at 11.49.49 AM (2).txt  WhatsApp Image 2023-10-13 at 11.49.50 AM (1).txt
src/object_detector/dataset/labels/val/: 1696670622651.txt  1696670622660.txt  1696670622664.txt  1696670622674.txt  1696670622709.txt  1696670622722.txt  1696670622726.txt  WhatsApp Image 2023-10-13 at 11.49.50 AM.txt
src/object_detector/launch/: vision_pipeline.launch.py
src/object_detector/object_detector/: object_detector.py
src/object_detector/scripts/: object_detector
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/urdf/: panda.urdf.xacro
src/panda_description/urdf/common/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  hand.urdf.xacro  utils.xacro
src/pick_and_place/: CMakeLists.txt  package.xml
src/pick_and_place/launch/: pick_and_place.launch.py
src/pick_and_place/src/: center_control.cpp  command_sub.cpp  scan_move.cpp
src/pyqt_gui/: CMakeLists.txt  package.xml
src/pyqt_gui/pyqt_gui/: main_window.py  ros_node.py  utils.py
src/pyqt_gui/pyqt_gui/widgets/: control_panel.py
src/pyqt_gui/scripts/: gui_node
src/vision_sim/: controller_node.cpp
worlds/: .ros2_webots_vision.wbproj  .vision_world.wbproj  ros2_webots_vision.wbt  vision_world.wbt
