<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_description</name>
  <version>0.0.0</version>
  <description>
    URDF/XACRO description and mesh assets for the Franka Emika Panda robot,
    vendored for use in ros2_webots_vision.
  </description>

  <maintainer email="tlacogns@gmail.com">sch</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & export dependencies -->
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <!-- To locate this package’s share directory from Python/Launch files -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
